# waypoint_server

./: LICENSE
interactive_waypoint_server/: CMakeLists.txt  package.xml
interactive_waypoint_server/scripts/: .#interactive_waypoint_server.py  interactive_waypoint_server.py
interactive_waypoint_server_msgs/: CMakeLists.txt  package.xml
interactive_waypoint_server_msgs/srv/: GetWaypointGraph.srv  RemoveConnection.srv
waypoint_msgs/: CMakeLists.txt  package.xml
waypoint_msgs/msg/: WaypointEdge.msg  WaypointGraph.msg  WaypointNode.msg
waypoint_msgs/srv/: GetWaypointGraph.srv  LoadWaypoints.srv  RemoveEdge.srv  SaveWaypoints.srv
waypoint_server/: CMakeLists.txt  package.xml  setup.py
waypoint_server/launch/: waypoint_server.launch
waypoint_server/scripts/: test.yaml  waypoint_server.py
