<?xml version="1.0"?>
<package format="2">
  <name>interactive_waypoint_server</name>
  <version>0.0.0</version>
  <description>Interactive_waypoint_server to use with ROSPlan</description>

  <maintainer email="felix.igelbrink@uos.de">Felix Igelbrink</maintainer>
  <author email="felix.igelbrink@uos.de">Felix Igelbrink</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>interactive_markers</depend>
  <depend>geometry_msgs</depend>
  <depend>interactive_waypoint_server_msgs</depend>
  <depend>diagnostic_msgs</depend>
  <depend>rospy</depend>
</package>
