<?xml version="1.0"?>
<package format="2">
  <name>waypoint_msgs</name>
  <version>0.1.0</version>
  <description>Messages for the waypoint server</description>
  <maintainer email="spuetz@uos.de">Sebastian Pütz</maintainer>
  <maintainer email="felix.igelbrink@uos.de">Felix Igelbrink</maintainer>
  <author email="spuetz@uos.de">Sebastian Pütz</author>
  <author email="felix.igelbrink@uos.de">Felix Igelbrink</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>message_generation</depend>
  <depend>genmsg</depend>
  <depend>std_msgs</depend>
  <depend>uuid_msgs</depend>
  <depend>geometry_msgs</depend>
  <exec_depend>message_runtime</exec_depend>
</package>
