<?xml version="1.0"?>
<package format="2">
  <name>waypoint_server</name>
  <version>0.1.0</version>
  <description>Waypoint server to set point in a map and connect these points to a graph</description>

  <maintainer email="spuetz@uos.de">Sebastian Pütz</maintainer>
  <author email="felix.igelbrink@uos.de">Felix Igelbrink</author>
  <author email="spuetz@uos.de">Sebastian Pütz</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>interactive_markers</depend>
  <depend>geometry_msgs</depend>
  <depend>waypoint_msgs</depend>
  <depend>diagnostic_msgs</depend>
  <depend>rospy</depend>
  <depend>unique_id</depend>
  <depend>uuid_msgs</depend> 
  <depend>python-networkx</depend>
  <depend>python-yaml</depend>
</package>
